@@ -22,12 +22,13 @@
 
 <tr><td>&nbsp;</td>
     <td align="center">
-       <a href="errors.html" target="diag">Errors</a>&nbsp;&nbsp;--
-       <a href="fault.html" target="diag">Faults</a>&nbsp;&nbsp;--
-       <a href="warnings.html" target="diag">Warnings</a>&nbsp;&nbsp;--
-       <a href="notice.html" target="diag">Notices</a>&nbsp;&nbsp;--
-       <a href="info.html" target="diag">Infos</a>&nbsp;&nbsp;--
-       <a href="alert.html" target="diag">Alerts</a>&nbsp;&nbsp;--
+       &mdash;
+       <a href="errors.html" target="diag">Errors</a>&nbsp;&nbsp;&mdash;
+       <a href="fault.html" target="diag">Faults</a>&nbsp;&nbsp;&mdash;
+       <a href="warnings.html" target="diag">Warnings</a>&nbsp;&nbsp;&mdash;
+       <!-- a href="notice.html" target="diag">Notices</a>&nbsp;&nbsp;&mdash; -->
+       <a href="info.html" target="diag">Infos</a>&nbsp;&nbsp;&mdash;
+       <!-- a href="alert.html" target="diag">Alerts</a>&nbsp;&nbsp;&mdash; -->
     </td>
     <td>&nbsp;</td>
     </tr>
