@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<table>
+<table width="100%">
 <!--{index DIAGNOSTICS type => info}-->
 </table>
 
